--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -3,7 +3,7 @@
   	
 <!--     <input type="number" ng-model="Map.zoom" ng-change="Map.
 	testZoom(Map.zoom)"></input> -->
-	
+	<!-- <pre>{{Map.coordinates | json}}</pre> -->
     <div id="Map" style="height:600px; width:100%; border:3px solid red;"></div>
       
   </ion-content>
