--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,9 +1,8 @@
 <ion-view view-title="Map">
-  <ion-content>
-<!--     <input type="number" ng-model="Map.zoom" ng-change="Map.
-	testZoom(Map.zoom)"></input> -->
-	<!-- <pre>{{Map.coordinates | json}}</pre> -->
-    <div id="Map" style="height:600px; width:100%; border:3px solid red;"></div>
+  <ion-content >
+    <!-- <input type="number" ng-model="Map.zoom" ng-change="Map.updateZoom(Map.zoom)"></input>
+ -->
+    <div id="Map" style="height:{{Map.gmap.height}}px; width:100%; webkit-transition: all 1s ease; "></div>
       
   </ion-content>
 </ion-view>
