--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -3,7 +3,7 @@
     
 	    
 	<h4>{{locations_loaded}} of {{locations.length}}</h4>
-	<div class="list">
+	<!-- <div class="list">
 		<div class="item item-divider" ng-repeat="group in locations_groups">
 			<h3>{{ group.category }}</h3>
 
@@ -17,10 +17,8 @@
 			    	</div>
 			    </div>
 			  </ion-slide>
-
-			  
 		</div>
-	</div>
+	</div> -->
 
 
 	
