--- a/www/templates/locations-carousel.item.html
+++ b/www/templates/locations-carousel.item.html
@@ -1,5 +1,19 @@
-<div class="carousel-item demo-1">
-    <div class="circle">
-        <span>carousel item</span>
-    </div>
+<div class="box card card--location" ng-click="vm.onSelect({item:vm.ngModel})">
+	<div class="item item-divider card--location-header">
+		<span class="location-name">{{vm.ngModel.name}}</span><br>
+		<div class="card--location-header-meta">
+			<i class="ion-android-walk"> <small>{{vm.ngModel.travelTime.text}} </small></i>
+			<i class="ion-android-time"> 
+				<small>0 - 0</small>
+			</i>
+			<div class="location-expense">
+				<span style="width:{{vm.ngModel.distance.value/100}}%"class="location-expense-indicator"> 
+					<i class="ion-cash"> </i>
+				</span>
+				<i class="ion-cash location-expense-base"> </i>
+			</div>
+		</div>
+
+	</div>
+    
 </div>
