Map view: hide/reveal locations based on an adjustable radius

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -5,10 +5,11 @@
 
     <!-- <input type="number" ng-model="Map.knob.value" ng-change="Map.gmap.map.setZoom(Map.knob.value)"></input>
  -->
-    <!-- <ui-knob  
+    <ui-knob  
+    	id="map-knob"
     	value="Map.knob.value" 
     	options="Map.knob.options">
-    </ui-knob> -->
+    </ui-knob>
 
   </ion-content>
 </ion-view>
