--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -83,7 +83,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
  	.card--location-header{
  		text-align:left;
- 		padding:5px;
+ 		padding:2px 5px;
  		*{ margin:0; padding:0;}
 
  		.location-name{ 
@@ -93,6 +93,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
  		}
 
  		.card--location-header-meta{ 
+ 			display:flex;
  			.location-expense{
  				display: block;
  				width:21%;
@@ -120,4 +121,15 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
  			}	
  		}
  	}
+ }
+
+
+/* =======================================================================
+  Map 
+ ========================================================================== */
+ #map-knob{
+ 	display: block;
+ 	position: absolute;
+ 	bottom:0;
+ 	left:25%;
  }
