--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -76,6 +76,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
  ========================================================================== */
 
  .a-carousel{
+ 	border:1px solid black;
+
  	.card--location{
  		width: 120px;
  		height:100px;
@@ -127,9 +129,46 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 /* =======================================================================
   Map 
  ========================================================================== */
- #map-knob{
- 	display: block;
- 	position: absolute;
+ 
+
+
+.map--slider{
+
+	width:100%;
+	height: 0px;
+	display:block;
+	z-index:100;
+	position: absolute;
+	top:0;
+	left:0;
+	background:rgba(#fff, 0.75);
+	transition:height 1s ease ;
+	&.here{
+		height: 200px;
+	}
+	// .slider-slides{width:100% !important;}
+	.slider-slide{
+		width:100%;
+		height: 200px;
+		color:#fff;
+	}
+}
+
+
+.map-discovery-nav{
+	height:50px;
+	width:100%;
+	display:block;
+	z-index:2000;
+	position: absolute;
  	bottom:0;
- 	left:25%;
- }
+ 	left:0;
+ 	background:rgba(#fff, 0.75);
+
+	.map-knob{
+ 		display: block;
+ 		margin:-50px auto 0 auto;	
+ 		background:#fff;
+ 		border-radius: 50px;
+ 	}
+}
