--- a/platforms/ios/www/templates/login.html
+++ b/platforms/ios/www/templates/login.html
@@ -1,25 +1,46 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
+<ion-view view-title="Login" hide-nav-bar="true">
+  <ion-content class="login">
+
+  	<section class="yocal-header">
+  		<h1 id="logo">YOCAL</h1>
+    	<p>Lorem ipsum dolor sit amet, cons sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
+  	</section>
+
+    <div class="list list-inset">
+      <li class="item item-toggle ion-left ion-location">
+        Explore Current location
+
+         <label class="toggle toggle-balanced">
+           <input type="checkbox" checked>
+           <div class="track">
+             <div class="handle"></div>
+           </div>
+         </label>
+      </li>
     </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
-      </div>
-    </form>
+
+    <div class="list list-inset">
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">First Name</span>
+        <input type="text" placeholder="John">
+      </label>
+
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">Last Name</span>
+        <input type="text" placeholder="Suhr">
+      </label>
+
+      <label class="item item-input item-stacked-label">
+        <span class="input-label">Email</span>
+        <input type="text" placeholder="john@suhr.com">
+      </label>
+
+      <button ui-sref="app.browse" class="button button-block button-balanced icon-left ion-map" > 
+          START EXPLORING
+      </button>
+  </div>
+  	
+    
+
   </ion-content>
-</ion-modal-view>
+</ion-view>
