--- a/platforms/ios/www/templates/menu.html
+++ b/platforms/ios/www/templates/menu.html
@@ -1,6 +1,10 @@
+
+
 <ion-side-menus enable-menu-with-back-views="false">
+
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+
+    <ion-nav-bar class="bar-positive">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -9,8 +13,11 @@
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
+
     <ion-nav-view name="menuContent"></ion-nav-view>
+    
   </ion-side-menu-content>
+
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
@@ -21,14 +28,11 @@
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
-        </ion-item>
         <ion-item menu-close href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close href="#/app/map">
+          Map
         </ion-item>
       </ion-list>
     </ion-content>
