--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -130,29 +130,176 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   Map 
  ========================================================================== */
  
+#Map{
+	transition:height 1s ease;
+	position: absolute;
+	bottom:50px;
+	left:0;
+	z-index:1;
+	transition: all 0.25s ease;
+	&.location-focused{
+		height: 350px !important;
+		// bottom:300px;
+		// transform: matrix3d(1,0,0.00,0,0.00,1,0.00,-.004,0,0,1,0,0,-60,0,1)!important;
+  //       -webkit-transform: matrix3d(1,0,0.00,0,0.00,1,0.00,-.004,0,0,1,0,0,-60,0,1)!important;
+	}
+}
+
+
+
+.map--slider-metaBar{
+		width:100%;
+		height: 0px;
+		padding:0;
+		display: block;
+		overflow:hidden;
+
+		z-index:100;
+		position: absolute;
+		top:0px;
+		left:0;
+
+		text-align: center;
+		color:#000;
+
+		background:#fff;
+		transition:all 0.5s ease;
+		&.is-shown{ height: 50px; padding:5px 15px;}
+
+		.meta-category{ text-transform: uppercase; }
+}
+
 
 
 .map--slider{
 
 	width:100%;
-	height: 0px;
+	height: 250px;
 	display:block;
 	z-index:100;
 	position: absolute;
-	top:0;
+	top:50px;
 	left:0;
-	background:rgba(#fff, 0.75);
-	transition:height 1s ease ;
-	&.here{
-		height: 200px;
+	
+
+	opacity:0;
+	pointer-events:none;
+	transition:all 0.5s ease;
+
+	&.is-shown{ 
+		opacity: 1;
+		pointer-events: auto;
 	}
-	// .slider-slides{width:100% !important;}
+	
+
 	.slider-slide{
 		width:100%;
 		height: 200px;
 		color:#fff;
+		
+		transform-origin: top center;
+		&.active{ 
+			// transform:scale(0.90) !important;
+		}
 	}
+
+
 }
+
+
+
+
+.map--slider-location{
+
+
+	&:before{
+			content:'';
+			display: block;
+			width:100%;
+			height: 50%;
+			position: absolute;
+			top:0;
+			left:0;
+			z-index:100;
+			/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+39,0+100 */
+			background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.65) 5%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+			background: -webkit-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 5%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+			background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 5%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+		}
+
+	.map--slider-location-img{
+		position: absolute;
+		z-index:1;
+		top:0;
+		left:0;
+		-webkit-mask-image: -webkit-gradient(
+    		linear, center top, center bottom, 
+    		color-stop(0.00,  rgba(0,0,0,1)),
+    		color-stop(0.75,  rgba(0,0,0,1)),
+    		color-stop(1.00,  rgba(0,0,0,0)));
+	}
+
+	.item{
+		background:none;
+		border:none;
+		position: relative;
+		z-index:200;
+	}
+
+	.location-name{
+		font-size:20px; 
+		font-weight: bold;
+		color:#fff;
+	}
+	address{ 
+		color:#fff;
+		font-size:12px; 
+		font-weight: normal;
+		margin-bottom:5px;
+		i{padding-right: 5px;}
+	}
+
+	.card--location-header-meta{
+
+		.ion-android-time{
+			float:left;
+			background:rgba(#fff, 0.5);
+			padding:0 3px;
+			&:before{color:green;}
+			small{margin-top:-2px;}
+		}
+
+		.location-expense{
+ 			display: block;
+ 			float:left;
+ 			width: 100px;
+ 			position: relative;
+ 			margin:0 0 0 15px;
+
+ 			i:before{
+ 				color:#fff;
+ 				background:green;
+ 			}
+
+ 			.location-expense-indicator{
+ 				overflow:hidden;
+ 				display: block;
+ 			}
+ 			.location-expense-base{
+ 				position: absolute;
+ 				top:0;
+ 				left:0;
+ 				opacity: 0.125;
+ 			}
+ 		}
+
+
+	}
+
+
+}
+
 
 
 .map-discovery-nav{
@@ -164,11 +311,29 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
  	bottom:0;
  	left:0;
  	background:rgba(#fff, 0.75);
+ 	transition: all 1s ease;
 
-	.map-knob{
- 		display: block;
- 		margin:-50px auto 0 auto;	
+ 	&.loaded{
+		background:rgba(#fff, 1);
+		.map-discovery-knob{
+			.radius-knob{ transform: scale(1); opacity:1;}
+		} 
+ 	}	
+
+ 	.map-discovery-knob{
+ 		width: 100px;
  		background:#fff;
  		border-radius: 50px;
+ 		margin:-50px auto 0 auto;
+
+
+ 		.radius-knob{
+ 			display: block;
+ 			transition: all 1s ease;
+ 			transform: scale(0.25);
+ 			transform-origin: center;
+ 			opacity: 0;
+ 		}	
  	}
+	
 }
