--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,38 +1,55 @@
 <ion-view view-title="Map">
   <ion-content scroll="false">
+    
+    <nav class="map--slider-metaBar" ng-class="{'is-shown':Map.slider.shown}" >
+        <h4><span class="meta-category">{{Map.slider.meta.category}} </span>{{Map.slider.meta.travelTime.text}}</h4>
+    </nav>
 
-    <ion-slide-box class="map--slider" ng-class="{here:Map.showSlider}">
-    	<ion-slide ng-repeat="location in Map.locations_by_distance">
-    		<div class="box card card--location">
+    <ion-slide-box 
+            class="map--slider" 
+            ng-class="{'is-shown':Map.slider.shown}" 
+            show-pager="false"
+            on-slide-changed="slideHasChanged($index)">
 
+
+    	<ion-slide ng-repeat="location in Map.locations_by_distance" ng-class="{'active':location.isActive}">
+
+    		<div class="map--slider-location" >
+                <img class="map--slider-location-img" src="http://lorempixel.com/375/200/city/{{$index}}">
     			<div class="item item-divider card--location-header">
 					<span class="location-name">{{location.name}}</span><br>
-					<div class="card--location-header-meta">
-						<i class="ion-android-walk"> <small>{{location.travelTime.text}} </small></i>
-						<i class="ion-android-time"> <small>0 - 0</small></i>
-						<div class="location-expense">
-							<span style="width:{{location.distance.value/100}}%"class="location-expense-indicator"> 
-								<i class="ion-cash"> </i>
-							</span>
-							<i class="ion-cash location-expense-base"> </i>
-						</div>
-					</div>
-				</div>
+                    <address> <i class="ion-ios-location"></i>{{location.adress}}</address>
 
+					<div class="card--location-header-meta">
+						<i class="ion-android-time"> <small>0 - 0</small></i>
+                        <div class="location-expense">
+                            <span style="width:{{location.travelTime.value/100}}%"class="location-expense-indicator"> <i class="ion-cash"> </i></span>
+                            <i class="ion-cash location-expense-base"> </i>
+                        </div>
+
+					</div>
+
+                    
+
+				</div>
     		</div>
+
     	</ion-slide>
 	</ion-slide-box>
 
 
-    <div id="Map" style="height:{{Map.gmap.height}}px; width:100%; webkit-transition: all 1s ease; "></div>
+    <div id="Map" style="height:{{Map.gmap.height}}px; width:100%; "  ng-class="{'location-focused':Map.gmap.locationFocused}"></div>
 
-    <nav class="map-discovery-nav">
-    	<ui-knob  
-    		class="map-knob"
-    		value="Map.knob.value" 
-    		options="Map.knob.options"
-    		style="width:{{Map.knob.options.size}}px; "
-    	></ui-knob>
+    <nav class="map-discovery-nav" ng-class='{loaded:Map.locations_loaded}'>
+        <div class="map-discovery-knob">
+            <ui-knob  
+                class="radius-knob"
+                value="Map.knob.value" 
+                options="Map.knob.options"
+                style="width:{{Map.knob.options.size}}px; "
+            ></ui-knob>
+        </div>
+    	
     </nav>
     
 
