--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -157,6 +157,18 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 			background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
 			background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#80000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+			text-align: center;
+
+			.map-discovery-city{
+				text-transform: uppercase;
+				color: #fff;
+				margin-top: 15%;
+				line-height:1;
+				span{
+					color:$positive;
+					text-decoration: underline;
+				}
+			}
 
 
 
@@ -183,6 +195,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
     				height: 0;
     				transform-origin:center;
 
+
     				&:first-child{transform:rotate(120deg);}
     				&:nth-child(2){transform:rotate(180deg);}
     				&:nth-child(3){transform:rotate(240deg);}
@@ -198,7 +211,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
     					opacity: 0;
  						border-radius:50%;
- 						background:#ccc;
+ 						background:$positive;
+ 						color:$light;
 
  						transition: all 0.25s linear 0.75s;
 
@@ -237,6 +251,57 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	}
 }
 
+.map--slider-metaNav{
+	width:100%;
+	height: 0px;
+	padding:0;
+	display: block;
+	overflow:hidden;
+	background:$stable;
+
+	z-index:100;
+	position: absolute;
+	top:0px;
+	left:0;
+
+	transition:all 0.25s ease ;
+
+	&.shown{ height: 50px; }
+
+	.map--slider-metaNav-city{
+		width: 100%;
+		display: block;
+		margin:0;
+		text:{
+			align: center;
+			transform: uppercase;
+		}
+		color:$dark;
+		background: darken($stable, 10%);
+	}
+
+	.map--slider-metaNav-controls{
+		display: flex;
+		> *{width:100%;}
+		p{
+			display: inline-block; 
+			float:left;
+			padding: 5px 0 0 10px;
+		}
+		.distance-knob{
+			float:left;
+ 			display: block;
+ 			transition: all 1s ease;
+ 			text{
+ 				font-size:14px;
+ 				font-weight: bold;
+ 				margin-top:5px;
+ 			}
+ 		}	
+
+
+	}
+}
 
 
 .map--slider-metaBar{
