--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -5,13 +5,14 @@
   <ion-side-menu-content>
 
     <ion-nav-bar class="bar-positive">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+    
+      <ion-nav-back-button></ion-nav-back-button>
 
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
+
     </ion-nav-bar>
 
     <ion-nav-view name="menuContent"></ion-nav-view>
@@ -20,9 +21,11 @@
 
 
   <ion-side-menu side="left">
+
     <ion-header-bar class="bar-stable">
       <h1 class="title">Left</h1>
     </ion-header-bar>
+
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
@@ -36,5 +39,8 @@
         </ion-item>
       </ion-list>
     </ion-content>
+
   </ion-side-menu>
+
+
 </ion-side-menus>
