--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -17,8 +17,7 @@
         <p class="map--slider-metaNav-city">{{currentPosition.city}}</p>
 
         <div class="map--slider-metaNav-controls">
-            <!-- <button>{{Map.locations_categories.current}}</button> -->
-
+            
             <select name="repeatSelect" 
                     id="repeatSelect" 
                     ng-model="Map.locations_categories.current"
@@ -49,32 +48,37 @@
             on-slide-changed="slideHasChanged($index)">
 
 
-    	<ion-slide ng-repeat="location in Map.locations_by_distance" ng-class="{'active':location.isActive}">
+        <ion-slide ng-repeat="location in Map.locations_by_distance" 
+                   ng-class="{'active':location.isActive}"
+        >
 
-    		<div class="map--slider-location" >
-                <img class="map--slider-location-img" src="http://lorempixel.com/375/200/city/{{$index}}">
-    			<div class="item item-divider card--location-header">
-					<span class="location-name">{{location.name}}</span><br>
+            <div class="map--slider-location" >
+                <!-- <img class="map--slider-location-img" src="http://lorempixel.com/375/200/city/{{$index}}"> -->
+                <div class="item item-divider card--location-header">
+                    <span class="location-name">{{location.name}}</span><br>
                     <address> <i class="ion-ios-location"></i>{{location.adress}}</address>
 
-					<div class="card--location-header-meta">
-						<i class="ion-android-time"
-                            ng-class="{
-                            'is-open': location.opening_hours.open_now,
-                            'is-closed': !location.opening_hours.open_now
-                            }"
-                        > <small>0 - 0</small></i>
+                    <div class="card--location-header-meta">
+
+                        <i class="ion-android-time"
+                           ng-class='{
+                                "is-open": location.opening_hours.open_now,
+                                "is-closed": !location.opening_hours.open_now
+                            }'> 
+                            <small>0 - 0</small>
+                        </i>
+
                         <div class="location-expense">
                             <span style="width:{{location.travelTime.value/100}}%"class="location-expense-indicator"> <i class="ion-cash"> </i></span>
                             <i class="ion-cash location-expense-base"> </i>
                         </div>
-					</div>
+                    </div>
 
-				</div>
-    		</div>
+                </div>
+            </div>
 
-    	</ion-slide>
-	</ion-slide-box>
+        </ion-slide>
+    </ion-slide-box>
 
 
 
@@ -112,25 +116,36 @@
 
         <div
             ng-show="!Map.slider.shown" 
-            class="map-discovery-knob">
+            class="map-discovery-knob"
+            ng-class="{'cats-expanded': Map.discoverCatsExpanded}"
+            ng-click="Map.discoverCatsExpanded = !Map.discoverCatsExpanded"
+        >
+            
+            <ul class="map-discovery-knob--cats" ng-class="{active: Map.discoverCatsExpanded}">
+                <li 
+                    ng-repeat="category in Map.locations_categories.list"
+                    ng-click="Map.load_category(category)">
+                        <button  >{{category.name}}</button>
+                    </li>
+            </ul>
+
             
             <span ng-class="{
-                'ion-beer': Map.locations_categories.current.name === 'Drink',
-                'ion-pizza': Map.locations_categories.current.name === 'Food'
+                'ion-close-circled': Map.discoverCatsExpanded,
+                'ion-beer': Map.locations_categories.current.name === 'Drink' &&Map.discoverCatsExpanded == false,
+                'ion-pizza': Map.locations_categories.current.name === 'Food' &&Map.discoverCatsExpanded == false,
             }">
-                <select name="repeatSelect" 
-                        id="repeatSelect" 
-                        ng-model="Map.locations_categories.current"
-                        ng-change="Map.load_category(Map.locations_categories.current)"
-                        ng-options="category.name for category in Map.locations_categories.list">
-                </select>
+                <h4 ng-show="Map.discoverCatsExpanded == false">{{Map.locations_categories.current.name}}</h4>
+                <h4 ng-show="Map.discoverCatsExpanded">DISCOVER</h4>
             </span>
 
             <ui-knob  
+                ng-show="!Map.discoverCatsExpanded"
                 class="radius-knob"
                 value="Map.knob.value" 
                 options="Map.knob.options"
                 style="width:{{Map.knob.options.size}}px;"
+
             ></ui-knob>
             
         </div>
@@ -140,8 +155,8 @@
             ng-show="Map.slider.shown"
             class="map-discovery-location"
         >
-            <i class="ion-ios-navigate"
-                ng-click="Map.load_category('drink')"></i>
+
+            <i class="ion-ios-navigate"></i>
 
             <button class="ion-ios-close" 
                     ng-click="Map.showDiscoveryMap()">
@@ -154,7 +169,7 @@
                 <li><button ><i class="ion-android-share-alt"></i></button></li>
             </ul>
         </div>
-    	
+        
     </nav>
     
 
